Update robots.txt and fix overflow issues

--- a/src/components/index/Mouse.module.css
+++ b/src/components/index/Mouse.module.css
@@ -16,5 +16,6 @@
 .image {
     position: absolute;
     transform: translateY(-25%);
-    width: 350px;
+    width: 75vw;
+    max-width: 250px;
 }
